# z8

./: .claude_settings.json  .dockerignore  .env.template  .gitignore  .impeccable.md  .mcp.json  .npmrc  .phase.json  .prettierrc  ADMIN_GUIDE.md  AGENTS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.db-seed.dockerignore  Dockerfile.docs  Dockerfile.docs.dockerignore  Dockerfile.marketing  Dockerfile.marketing.dockerignore  Dockerfile.webapp.dockerignore  Dockerfile.worker  FairUsagePolicy.md  IMPLEMENTATION_PLAN.md  LICENSE  NOTIFICATIONS_PLAN.md  README.en.md  README.md  USER_GUIDE.md  analyze_missing_keys.js  docker-bake.hcl  docker-compose.dev.yml  docker-compose.prod.yml  doctor.config.ts  next.config.ts  opencode.jsonc  package-lock.json  package.json  plan-docs-shooter.md  pnpm-lock.yaml  pnpm-workspace.yaml  react-doctor.config.json  (+2 more)
.claude/: settings.local.json
.interface-design/: system.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: auth.rs  clock.rs  commands.rs  idle.rs  lib.rs  main.rs  offline.rs  settings.rs  startup.rs  state.rs  tray.rs
deploy/: .env.template  README.md
docker/: Dockerfile.db-seed  Dockerfile.deploy-webhook  Dockerfile.docs  Dockerfile.marketing  Dockerfile.migration  Dockerfile.migration.dockerignore  Dockerfile.notify-server  Dockerfile.webapp  Dockerfile.worker  Dockerfile.worker.dockerignore
drizzle/: schema.ts
messages/: en.json
scripts/: build.mjs  capture-screenshots.js
(+3986 files in other folders)
